--- a/index.html
+++ b/index.html
@@ -7,12 +7,44 @@
   <title>¡¡Felicidades!!</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body id="particles-js">
+  <main>
+    <section class="title">
+      <h1>¡Feliz día del Padre!</h1>
+      <p>¡Muchas felicidades! Aunque estemos un poco lejos para abrazarte queremos que sepas que siempre estás en nuestro corazón y te queremos un montón. </p>
+      <h2> Los extrañamos mucho, ¡MUCHO!</h2>
+    </section>
+    <section class="regalo-section">
+      <p>Te tenemos un regalito para que la pases bien el día de hoy, tienes que abrirlo para descubrir que es...</p>
+      <figure>
+        <img class="regalo" src="img/regalo.png" alt="Regalo">
+      </figure>
+    </section>
+    <section class="cupon-section">
+      <article>
+        <figure class="inline-block">
+          <img src="img/fam.jpg" alt="Familia">
+        </figure>
+        <div class="inline-block">
+          <h2>¡DESAYUNO SUPER RICO!</h2>
+          <p class="text-justify">Este cupon equivale a una salida a desayunar hoy y un regalo exclusivo que se entregará cuando estemos a allá.</p>
+          <hr>
+          <p class="text-justify">Esperamos que se la pasen muy bien y que nos cuenten que tal les fue, quizas despertemos un poco más tardesito, pero te llamaremos para felicitarte y mandar amor.</p>
+        </div>
+      </article>
+    </section>
+  </main>
+  <!-- <section id="particles-js">
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nisi accusantium beatae mollitia non accusamus ad laborum fuga doloribus consequuntur nobis blanditiis, fugiat sit exercitationem dolorum, ea alias, temporibus voluptatibus.</h1>
+  </section> -->
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="js/particles.min.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
