--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       </figure>
     </section>
     <section class="cupon-section">
-      <article>
-        <figure class="inline-block">
+      <article class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
+        <figure class="inline-block col-xs-12 col-sm-4">
           <img src="img/fam.jpg" alt="Familia">
         </figure>
-        <div class="inline-block">
+        <div class="inline-block col-xs-12 col-sm-8">
           <h2>¡DESAYUNO SUPER RICO!</h2>
           <p class="text-justify">Este cupon equivale a una salida a desayunar hoy y un regalo exclusivo que se entregará cuando estemos a allá.</p>
           <hr>
